tests/failure/first_arg_not_self.stderr
error: expected a receiver
  --> $DIR/first_arg_not_self.rs:17:11
   |
17 |     fn op(other: &B, this: &Self) -> i32 {
   |           ^^^^^
